tests/integration/errors/test_iterator_missing_iter.sn
# Error test: struct used in for-each without iter() method

struct Bag =>
  count: int

fn main(): int =>
  var b: Bag = {count: 3}
  for x in b =>
    print(x)
  return 0
